# n-body-example

./: CMakeLists.txt  CMakeSettings.json  README.md  oneAPI-2024 CPC v1.0.docx  oneAPI-2024 СРС v0.9.docx  ~$eAPI-2024 СРС v0.9.docx
gui/: CMakeLists.txt  main.cpp
include/: GSimulation.hpp
src/: CMakeLists.txt  GSimulation.cpp  main.cpp
ver0/: GSimulation.cpp  cpu_time.hpp
